Fixing icons alignment

--- a/app/components/uri/URIDisplayDialog.scss
+++ b/app/components/uri/URIDisplayDialog.scss
@@ -6,6 +6,12 @@
     .Dialog_title {
       margin-bottom: 24px;
     }
+
+    .CopyableAddress_copyIconBig {
+      & > svg {
+        margin-top: -9px;
+      }
+    }
   }
 
   .uriDisplay {
@@ -20,9 +26,13 @@
       font-family: var(--font-regular);
       word-break: break-all;
       font-size: 16px;
-      line-height: 22px;
+      line-height: 24px;
       text-align: center;
     }
+  }
+
+  .uriDisplay .CopyableAddress_copyIconBig {
+    border: 1px solid red;
   }
 
   .qrCode {
